fixed some of the strange looking forms in event_administer. It is a litte cleaner but not perfect

--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -47,11 +47,11 @@
 </h3>
 {% endif %}
 
-<table class="table table-bordered table-striped" style="table-layout: fixed;">
+<table class="table table-bordered table-striped">
 
     <!-- Fra -->
     <tr>
-        <td scope="row">Starter</td>
+        <td >Starter</td>
         <td>
             <time datetime="{{ event.event_start|date:"c" }}">
                 <b>{{ event.event_start|naturalday }} kl. {{ event.event_start|date:"H:i" }}</b>
