--- a/nablapps/events/templates/events/event_administer.html
+++ b/nablapps/events/templates/events/event_administer.html
@@ -1,64 +1,47 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}{{ event.headline }}{% endblock %}
 
 {% block content %}
 
-<h2> {{ event.headline }} </h2>
+
+<h2> Administrer <a href="{{event.get_absolute_url}}">{{ event.headline }}</a> </h2>
 {% if event.registration_required %}
-
-<div class="row">
-    <div class="col-sm-6">
-        <ul class="list-group list-group-flush " >
-            <li class="list-group-item">
-                <span class="badge"> {{ event.places }} </span>
-                Plasser:
-            </li>
-            <li class="list-group-item">
-                <span class="badge"> {{ event.users_attending }} </span>
-                Påmeldte:
-            </li>
-            <li class="list-group-item">
-                <span class="badge"> {{ event.users_waiting }} </span>
-                Ventende:
-            </li>
-        </ul>
+<br>
+<form action="" method="post" class="form-inline" >{% csrf_token %}
+    <div class="input-group mb-2 mr-sm-2">
+        <div class="input-group-prepend">
+            <div class="input-group-text">@</div>
+        </div>
+        <input type="text" class="form-control" name="text" maxlength="10" id="usernameInput"  placeholder="brukernavn">
     </div>
-    <div class="col-sm-6 ">
-        <label >Epostliste:</label>
-        <textarea class="form-control rounded-0"; rows = "4">{% for email in event.users_attending_emails %}{{ email }}; {% endfor %}</textarea>
+    <input type="hidden" name="action" value="add" />
+    <button  type="submit" value="Legg til"  class="btn btn-primary mb-2 mr-2">Meld på bruker</button>
+    <div class="form-check mb-2 mr-sm-2">
+        <input class="form-check-input"  type="checkbox" name="Regelboks" value="True" id="regelBoks">
+        <label class="form-check-label" for="regelBoks">
+        Ignorer påmeldingsregler
+        </label>
     </div>
 
-</div>
+</form>
+<hr>
 
 <form action="" method="post" class="form">{% csrf_token %}
-    <label for="text">Legg til bruker: </label>
-    <div class="form-inline">
-        <input class="form-control" type="text" name="text" maxlength="10" placeholder="Brukernavn" />
-        <input type="hidden" name="action" value="add" />
-        <button class="btn btn-primary" type="submit" value="Legg til" >Legg til </button>
-    </div>
-    <input class="form-check-input" type="checkbox" name = "Regelboks" value="True" id="regelBoks">
-    <label for="regelBoks">Ignorer påmeldingsregler</label> &emsp;
-</form>
-
- <form action="" method="post" class="form">{% csrf_token %}
-    <div class="form-inline pull-right">
-        <label>Kryss av brukere som skal fjernes:</label>
-        &emsp;
-        <input type="hidden" name="action" value="del" />
-        <button class="btn btn-primary "  type="submit" value="Fjern"> Fjern </button>
-    </div>
-
-
     {% if event.eventregistration_set %}
-        <table class="table">
+        <div class="form-group ">
+            <input  id="hidden-fjern" type="hidden" name="action" value="del" />
+            <button class="btn btn-danger" type="submit" value="Fjern"> Fjern avhukede brukere</button>
+        </div>
+        <table class="table" id="registrationTable">
             <thead>
                 <tr>
+                    <th align="center"><input type="checkbox" class="toggle-all"/></th>
+
                     <th>Plass</th>
                     <th>Navn</th>
                     <th>Klasse</th>
-                    <th align="center">X</th>
                 </tr>
             </thead>
 
@@ -66,10 +49,10 @@
                 {% with regs=event.attending_registrations %}
                 {% for reg in regs %}
                     <tr class="success">
+                        <td><input type="checkbox" name="user" value="{{ reg.user.username }}"/></td>
                         <td>{{ forloop.counter  }}</td>
                         <td>{{ reg.user.get_full_name }}</td>
                         <td>{{ reg.user.get_class_number }}</td>
-                        <td><input type="checkbox" name="user" value="{{ reg.user.username }}" /></td>
                     </tr>
                 {% endfor %}
                 {% endwith %}
@@ -77,10 +60,10 @@
                 {% with regs=event.waiting_registrations %}
                 {% for reg in regs %}
                     <tr class="warning">
+                        <td><input type="checkbox" name="user" value="{{ reg.user.username }}" /></td>
                         <td>{{ forloop.counter }}</td>
                         <td>{{ reg.user.get_full_name }}</td>
                         <td>{{ reg.user.get_class_number }}</td>
-                        <td><input type="checkbox" name="user" value="{{ reg.user.username }}" /></td>
                     </tr>
                 {% endfor %}
                 {% endwith %}
@@ -96,3 +79,44 @@
 {% endif %}
 
 {% endblock %}
+
+{% block sidebar %}
+<div class="d-none d-lg-block">
+    <br>
+    <br>
+    <br>
+</div>
+
+
+<table class="table table-striped table-bordered">
+    <tbody>
+        <tr>
+          <th scope="row">Plasser:</th>
+          <td>{{ event.places }}</td>
+        </tr>
+        <tr>
+          <th scope="row">Påmeldte:</th>
+          <td>{{ event.users_attending }}</td>
+        </tr>
+        <tr>
+          <th scope="row">Ventende:</th>
+          <td>{{ event.users_waiting }}</td>
+        </tr>
+    </tbody>
+</table>
+
+
+
+
+<div class="form-group mb-2">
+    <label for="epostliste-text">Kopierbar epostliste:</label>
+    <textarea class="form-control" id="epostliste-text" rows="5" readonly>{% for email in event.users_attending_emails %}{{ email }}; {% endfor %}</textarea>
+</div>
+<button class="btn btn-outline-secondary" onclick="copy_mail_list()" type="button" >
+Kopier epostliste
+</button>
+
+<script type="text/javascript" src="{% static "events/event_administer.js" %}"></script>
+
+{% endblock %}
+
