--- a/nablapps/news/templates/news/news_detail.html
+++ b/nablapps/news/templates/news/news_detail.html
@@ -18,16 +18,7 @@
 {% load easy_thumbnails %}
 
 
-<div class="box">
-    {% if news.picture %}
-    <img alt="header" class="img-fluid" src="{% thumbnail news.picture 760x300 box=news.cropping upscale=True detail=True quality=95 %}">
-    {% endif %}
-
-    <header><h2>{{ news.headline }}</h2></header>
-    <p><strong>{{ news.lead_paragraph}}</strong></p>
-    <div style="overflow: hidden;">{{ news.body|markdown}}</div>
-</div>
-
+{% include "content/includes/article_content.html" with content=news %}
 {% include "content/includes/comments.html" with content=news %}
 {% endblock %}
 
