--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -20,18 +20,14 @@
     <article class="card main-article ">
             <!--main article-->
             {% with main_news as news %}
-            {% if news.cropping and news.picture %}
-                <img alt=""
-                     class="card-img-top"
-                     src="{% thumbnail news.picture 570x200 box=news.cropping upscale crop="smart" quality=95 detail %}">
-                </img>
-
-            {% elif news.picture %}
-                <img alt=""
+            <img alt=""
                  class="card-img-top"
-                 src="{% thumbnail news.picture 570x200 quality=95 upscale crop="smart" detail %}">
-                </img>
+            {% if news.cropping and news.picture %}
+                 src="{% thumbnail news.picture 570x200 box=news.cropping upscale=True quality=95 detail=True  %}"
+            {% elif news.picture %}
+                 src="{% thumbnail news.picture 570x200 quality=95 crop="smart" upscale=True crop="smart" detail=True %}"
             {% endif %}
+            >
             <div class="card-body card-body-overline">
                 <h1 class="card-title"><a href="{{ news.get_absolute_url }}" class="text-dark stretched-link" >{{ news.headline }}</a></h1>
                 <p class="card-text">{{ news.lead_paragraph}}</p>
