Centered logos on front page

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -70,7 +70,7 @@
         {% endif %}
     </div>
 
-    <div class="sponsors card card-body card-body-overline">
+    <div class="sponsors card card-body card-body-overline justify-content-center">
         <!--Sponsorer-->
         {% if frontpageinfo %}
             <p>
