--- a/nablapps/jobs/templates/jobs/jobs_list.html
+++ b/nablapps/jobs/templates/jobs/jobs_list.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block sidebar %}
-    <div class="card h-100 ">
+    <div class="card pb-2">
         <div class="card-body px-3">
                 {% include "jobs/sidebar_include.html" %}
         </div>
