--- a/templates/includes/article_widget.html
+++ b/templates/includes/article_widget.html
@@ -1,15 +1,20 @@
 {% load easy_thumbnails %}
 
 <div class="card news more-news-{{ number|default:"mb-2" }} {{ margin|default:"mb-2" }}">
- {% if news.cropping and news.picture %}
-        <img alt=""
-             class="card-img-top"
-             src="{% thumbnail news.picture 770x300 box=news.cropping upscale quality=95 detail %}">
+    <img alt=""
+         class="card-img-top"
+    {% if news.picture and news.cropping %}
+         src="{% thumbnail news.picture 770x300 box=news.cropping upscale=True detail=True quality=95 %}"
     {% elif news.picture %}
-        <img alt=""
-             class="card-img-top"
-             src="{% thumbnail news.picture 770x300 quality=95 upscale crop="smart" detail %}">
+         src="{% thumbnail news.picture 770x300 crop="smart" upscale=True detail=True quality=95 %}"
+    {% elif news.obj.company.picture and news.obj.company.ignoreCrop %}
+         src="{% thumbnail news.obj.company.picture 770x300 upscale=True detail=True quality=95 background="white" %}"
+    {% elif news.obj.company.picture and news.obj.company.cropping %}
+         src="{% thumbnail news.obj.company.picture 770x300 box=news.obj.company.cropping upscale=True detail=True quality=95 %}"
+    {% elif news.obj.company.picture %}
+         src="{% thumbnail news.obj.company.picture 770x300 crop="smart" upscale=True detail=True quality=95 %}"
     {% endif %}
+    >
     <div class="card-body card-body-overline">
         <h5 class="card-title"><a href="{{ news.get_absolute_url }}" class="text-dark stretched-link" >{{ news.headline }}</a></h5>
         <p class="card-text">{{ news.lead_paragraph}}</p>
