--- a/templates/includes/info_card.html
+++ b/templates/includes/info_card.html
@@ -5,37 +5,47 @@
 
 
 
-<div class="card {{ class|default:" " }}{{ number|default:"" }}">
+<div class="card {{ class|default:" " }} {{ number|default:"" }}">
     <img alt=""
          class="card-img-top"
-    {% if content.company.picture and content.company.ignoreCrop %}
+    {% if content.picture and content.cropping %}
+         src="{% thumbnail content.picture 770x300 box=content.cropping upscale=True detail=True quality=95 %}"
+    {% elif content.picture %}
+         src="{% thumbnail content.picture 770x300 crop="smart" upscale=True detail=True quality=95 %}"
+
+
+
+    {% elif content.obj.company.picture and content.obj.company.ignoreCrop %}
+         src="{% thumbnail content.obj.company.picture 770x300 upscale=True detail=True quality=95 background="white" %}"
+    {% elif content.obj.company.picture and content.obj.company.cropping %}
+         src="{% thumbnail content.obj.company.picture 770x300 box=content.obj.company.cropping upscale=True detail=True quality=95 %}"
+    {% elif content.obj.company.picture %}
+         src="{% thumbnail content.obj.company.picture 770x300 crop="smart" upscale=True detail=True quality=95 %}"
+
+    {% elif content.company.picture and content.company.ignoreCrop %}
          src="{% thumbnail content.company.picture 770x300 upscale=True detail=True quality=95 background="white" %}"
     {% elif content.company.picture and content.company.cropping %}
          src="{% thumbnail content.company.picture 770x300 box=content.company.cropping upscale=True detail=True quality=95 %}"
     {% elif content.company.picture %}
          src="{% thumbnail content.company.picture 770x300 crop="smart" upscale=True detail=True quality=95 %}"
-    {% elif content.picture and content.cropping %}
-         src="{% thumbnail content.picture 770x300 box=content.cropping upscale=True detail=True quality=95 %}"
-    {% elif content.picture %}
-         src="{% thumbnail content.picture 770x300 crop="smart" upscale=True detail=True quality=95 %}"
     {% endif %}
     >
     <div class="card-body card-body-overline">
-        <h5 class="card-title {{ header_size|default:"" }}"><a href="{{ content.get_absolute_url }}" class="text-dark stretched-link" >
+        <{{ header_size|default:"h5" }} class="card-title"><a href="{{ content.get_absolute_url }}" class="text-dark stretched-link" >
             {% if content.print_headline and show_details|default:False %}
             {{  content.print_headline }}
             {% else %}
             {{ content.headline }}
             {% endif %}
-            </a></h5>
+            </a></{{ header_size|default:"h5" }}>
         <p class="card-text">{{ content.lead_paragraph|markdown:"unsafe"}}</p>
     </div>
         {%  if show_details|default:False %}
         <div class="card-footer">
             <small class="text-muted">
-                {% if job.relevant_for_year%} Stillingsannonsen er relevant for årskull {{ job.relevant_for_year.all|commas_no}} ved
-                {{ job.relevant_for_group.all|commas_no }}.{% endif %}{% if job.deadline_date %} Søknadsfristen er {{ job.deadline_date|naturalday }} kl.
-                {{ job.deadline_date|date:"H:i" }}.{% endif %}
+                {% if content.relevant_for_year%} Stillingsannonsen er relevant for årskull {{ content.relevant_for_year.all|commas_no}} ved
+                {{ content.relevant_for_group.all|commas_no }}.{% endif %}{% if content.deadline_date %} Søknadsfristen er {{ content.deadline_date|naturalday }} kl.
+                {{ content.deadline_date|date:"H:i" }}.{% endif %}
             </small>
         </div>
         {% endif %}
