--- a/templates/content/includes/article_content.html
+++ b/templates/content/includes/article_content.html
@@ -4,16 +4,16 @@
 <div class="card ">
     <img alt=""
          class="card-img-top"
-    {% if content.company.picture  and content.company.ignoreCrop %}
+    {% if content.picture and content.cropping %}
+         src="{% thumbnail content.picture 770x300 box=content.cropping upscale=True detail=True quality=95 %}"
+    {% elif content.picture %}
+         src="{% thumbnail content.picture 770x300 crop="smart" upscale=True detail=True quality=95 %}"
+    {% elif content.company.picture  and content.company.ignoreCrop %}
          src="{% thumbnail content.company.picture 770x300 upscale=True detail=True quality=95 background="white" %}"
     {% elif content.company.picture  and content.company.cropping %}
          src="{% thumbnail content.company.picture 770x300 box=content.company.cropping upscale=True detail=True quality=95 %}"
     {% elif content.company.picture  %}
          src="{% thumbnail content.company.picture 770x300 crop="smart" upscale=True detail=True quality=95 %}"
-    {% elif content.picture and content.cropping %}
-         src="{% thumbnail content.picture 770x300 box=content.cropping upscale=True detail=True quality=95 %}"
-    {% elif content.picture %}
-         src="{% thumbnail content.picture 770x300 crop="smart" upscale=True detail=True quality=95 %}"
     {% endif %}
     >
     <div class="card-body card-body-overline">
