--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -10,11 +10,10 @@
 <link rel="alternate" type="application/rss+xml" href="/feed/" title="RSS feed">
 {% endblock %}
 
-{% block main %}
+{% block main-blank %}
 {% addtoblock "css" %}
     <link  rel="stylesheet" href="{% static "css/front_page.css" %}">
 {% endaddtoblock %}
-
 <div class="maingrid-container{% if not newuser_message %}-authenticated{% endif  %}"><!--main grid container open tag-->
 <!--main content begin-->
     {% include "includes/info_card.html" with content=main_news class="main-article" header_size="h1" %}
@@ -123,7 +122,7 @@
 <!--sidebar end-->
 
 </div><!--main grid container close tag-->
-{% endblock main %}
+{% endblock main-blank %}
 
 
 
