fix of pull to float (bootstrap 3) and missing 'information' text

--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -35,9 +35,9 @@
 {% endaddtoblock %}
 
 <!-- event-info -->
-
+<h3 class="float-left">Informasjon</h3>
 {% if event.facebook_url %}
-<h3 class="pull-right">
+<h3 class="float-right">
     <a target="_blank" href="{{ event.facebook_url }}" class="btn btn-default btn-sm">
         <span class="fab fa-facebook-square"></span>
         Vis på Facebook
