--- a/nablapps/jobs/templates/jobs/info_include.html
+++ b/nablapps/jobs/templates/jobs/info_include.html
@@ -2,7 +2,7 @@
 {% load jobs_filters %}
 
 <table class="table table-bordered table-striped content-info">
-
+    <h3>Informasjon</h3>
     <!-- Fra -->
     {% if job.info_website or job.info_file %}
     <tr>
