--- a/templates/comments/form.html
+++ b/templates/comments/form.html
@@ -1,7 +1,7 @@
 {% load comments i18n %}
 
 
-<form action="{% comment_form_target %}" method="post" class="continer add-comment card card-body bg-light">
+<form action="{% comment_form_target %}" method="post" class="continer add-comment card card-body bg-light mb-3">
     {% csrf_token %}
     <fieldset>
 
