--- a/nablapps/events/templates/events/event_list.html
+++ b/nablapps/events/templates/events/event_list.html
@@ -32,7 +32,7 @@
             </select>
     </li>
     <li class="page-item">
-        <a href="{% url "event_list" next.year next.month %}">&raquo;</a>
+        <a href="{% url "event_list page-link" next.year next.month %}">&raquo;</a>
     </li>
 </ul>
 
