--- a/templates/content/includes/sidebar-admin.html
+++ b/templates/content/includes/sidebar-admin.html
@@ -1,5 +1,5 @@
 {% if admin_links and user.is_staff %}
-<div class="card panel-default">
+<div class="card">
     <div class="card-header">
         Admin
     </div>
