Adde Exceptions and time durations since attendance registration

--- a/nablapps/events/templates/events/register_attendance.html
+++ b/nablapps/events/templates/events/register_attendance.html
@@ -20,7 +20,7 @@
 <div class="form-group row">
     <label for="colFormLabelLg" class="col-sm-12 col-form-label col-form-label-lg">Brukernavn</label>
     <div class="col-sm-12">
-      <input type="text" class="form-control form-control-lg" name="input_field_value" id="colFormLabelLg" placeholder="Skriv inn brukernavn">
+      <input type="text" class="form-control form-control-lg" name="identification_string" id="colFormLabelLg" placeholder="Skriv inn brukernavn">
     </div>
 </div>
 
