Added seperate view for giving noshow users penalties.

--- a/nablapps/events/templates/events/register_attendance.html
+++ b/nablapps/events/templates/events/register_attendance.html
@@ -3,13 +3,13 @@
 {% block main-blank %}
 <style>
     #full-body{
-        background-color: #79e5c2;
+        background-color: var(--{{status_type}});
     }
 </style>
 
 
 <h1>{{ namestring }}</h1>
-<form method="post" id="user_identity_form">{% csrf_token %}
+<form method="post" action="{% url "event_noshow_penalties" event.pk %}">{% csrf_token %}
 {#{% if event.penalty == 1 %}#}
 {#    <button type="button" onclick="make_all_penalty('penalty_form')">Aktiver prikker</button>#}
 {#    <span>NB! Du må trykke send inn for at prikkene skal registreres.</span>#}
@@ -23,6 +23,11 @@
       <input type="text" class="form-control form-control-lg" name="identification_string" id="colFormLabelLg" placeholder="Skriv inn brukernavn">
     </div>
 </div>
+
+</form>
+
+<form method="post" action="{% url "event_noshow_penalties" event.pk %}">{% csrf_token %}
+<button class="btn btn-primary float-right" type="submit" value="register_noshow_penalties"></button>
 
 </form>
 
