--- a/templates/base.html
+++ b/templates/base.html
@@ -116,9 +116,9 @@
                             </a>
                         </div>
                         <br>
-                        <!--
-                        <img src="https://nabla.no/media/uploads/news_pictures/56478616_305187903480871_3493708702748246016_n.jpg" style="width: 100%;">
-                        -->
+                        
+                        <img src="https://nabla.no//media/uploads/content/fadderuka_2020.png" style="width: 100%;">
+                        
                         <small>
                             Grunnet nye personvernsregler i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla.
                             Derfor må du som ny student oppgi kontaktopplysninger selv.
