Fixed typo in forum

--- a/nablapps/nablaforum/templates/nablaforum/forum.html
+++ b/nablapps/nablaforum/templates/nablaforum/forum.html
@@ -141,7 +141,7 @@
                  </div>
              {% endfor %}
              
-             <h4>Ny medling:</h4>
+             <h4>Ny melding:</h4>
              <form method="POST">
                  {% csrf_token %}
                  {{ message_form.as_p }}
